got run_experiments to work

--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c7ab7413",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
     "\n",
     "    for line in lines:\n",
     "        # Check if the line contains formulation information\n",
-    "        if \"The formulation is\" in line:\n",
+    "        if \"The combination is\" in line:\n",
     "            # Add the current formulation to the list if it's not empty\n",
     "            if current_formulation:\n",
     "                formulations.append(current_formulation)\n",
@@ -74,7 +74,7 @@
     "        training_formulations = extract_formulations_from_training_data(training_data)\n",
     "    # Add the new user prompt to ask for three unique formulations\n",
     "    if enable_TVDL_strategy == 1:\n",
-    "        messages.append({\"role\": \"user\", \"content\": \"Output 3 three completly new and untested combinations with an extremly high expected performance , each of the three must adhere to the given structure and parameter limits!.\"})\n",
+    "        messages.append({\"role\": \"user\", \"content\": \"Output 3 three completly new and untested combinations with an extremly high expected shear modulus, each of the three must adhere to the given structure and parameter limits!.\"})\n",
     "    else: \n",
     "        messages.append({\"role\": \"user\", \"content\": \"Output 5 five different unique combinations with a extremly high expected performance, each of the five must adhere to the given structure and parameter limits!.\"})\n",
     "    \n",
@@ -87,13 +87,13 @@
     "            if conversation_dropdown.value == 'Complete':\n",
     "                print(\"You must propose novel and unique combinations that have not been tested before!\")\n",
     "        if retry_count > 1:\n",
-    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: 0, 1\"})\n",
+    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //M atom: Sc, Ti, V, Cr, Zr, Nb, Mo, Hf, Ta, W //A atom: Al, Si, P, S, Ga, Ge, As, Cd, In, Sn, Tl, Pb //X atom: C, N \"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: 0, 1\")\n",
+    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //M atom: Sc, Ti, V, Cr, Zr, Nb, Mo, Hf, Ta, W //A atom: Al, Si, P, S, Ga, Ge, As, Cd, In, Sn, Tl, Pb //X atom: C, N\")\n",
     "        if retry_count > 2:\n",
-    "            messages.append({\"role\": \"user\", \"content\": \"Try harder! Pay close attention to the exact format and order of ther parameters, for instance 0.6/0.4 and not 0.4/0.6\"})\n",
+    "            messages.append({\"role\": \"user\", \"content\": \"Try harder! Pay close attention to the exact format and order of ther parameters, for instance Si and not silicon\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(\"Try harder! Pay close attention to the exact format and order of ther parameters, for instance 0.6/0.4 and not 0.4/0.6\")\n",
+    "                print(\"Try harder! Pay close attention to the exact format and order of ther parameters, for instance Si and not silicon\")\n",
     "        \n",
     "                    \n",
     "        \n",
@@ -103,7 +103,7 @@
     "        response_lines = assistant_response.choices[0].message.content.split('\\n')\n",
     "        \n",
     "        # Define a regular expression pattern to capture the relevant information\n",
-    "        pattern = re.compile(r'A\\s*=\\s*(\\d+),\\s*B\\s*=\\s*(\\d+\\.\\d+),\\s*C\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*D\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
+    "        pattern = re.compile(r'M\\s*=\\s*(\\w+),\\s*A\\s*=\\s*(\\w+),\\s*X\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
     "\n",
     "        # Use list comprehension to find all matches in the response lines\n",
     "        formulations = [match.group(0) for line in response_lines for match in [pattern.search(line)] if match]\n",
@@ -133,11 +133,11 @@
     "        if training_data == []:\n",
     "            forward_prompt_base = f\"{context_prompt} \\n {VM_role_prompt}\"\n",
     "        else:\n",
-    "            forward_prompt_base = f\"{context_prompt} \\n ////Previous Formulation and Lab Validation:\" + \"\\n\".join(training_data) + f\"\\n{VM_role_prompt}\"\n",
+    "            forward_prompt_base = f\"{context_prompt} \\n ////Previous Combination and Lab Validation:\" + \"\\n\".join(training_data) + f\"\\n{VM_role_prompt}\"\n",
     "\n",
     "        for formulation in formulations:\n",
     "            # Create the full forward task prompt\n",
-    "            forward_prompt = f\"{forward_prompt_base}\\n Considering this context, what is the performance of {formulation}? Answer in this exact format: {'your estimate'}\"\n",
+    "            forward_prompt = f\"{forward_prompt_base}\\n Considering this context, what is the shear modulus of {formulation}? Answer in this exact format: {'your estimate'} MPa\"\n",
     "\n",
     "            if conversation_dropdown.value == 'Complete':\n",
     "                print(\"Forward Prompt:\", forward_prompt)\n",
@@ -147,17 +147,17 @@
     "\n",
     "            # Extract the predicted strength from the model's response\n",
     "            try:\n",
-    "                predicted_strength_str = forward_response.choices[0].message.content.split(' ')[-1]\n",
+    "                predicted_strength_str = forward_response.choices[0].message.content.split(' ')[-2]\n",
     "                predicted_strength_str_cleaned = predicted_strength_str.strip(\"' \")\n",
     "\n",
     "                # Now convert to float\n",
     "                predicted_strength = float(predicted_strength_str_cleaned)\n",
     "            except ValueError:\n",
-    "                print(f\"Could not convert performance for {formulation} to float. Skipping this combination.\")\n",
+    "                print(f\"Could not convert shear modulus for {formulation} to float. Skipping this combination.\")\n",
     "                continue\n",
     "\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(f\"Performance for {formulation}: {predicted_strength}\")\n",
+    "                print(f\"Shear modulus for {formulation}: {predicted_strength}\")\n",
     "\n",
     "            # Append to the predictions list\n",
     "            predictions.append((formulation, predicted_strength))\n",
@@ -191,7 +191,7 @@
     "        else:\n",
     "            print('TVDL')\n",
     "            # Load your data\n",
-    "            data = load_data('Data/DiscoveryData_Sample.csv')\n",
+    "            data = pd.read_csv('Data/alloys.csv')\n",
     "\n",
     "            # Select and format your training data\n",
     "            training_data, tested_formulations  = select_and_format_data(data, desired_strength)\n",
@@ -245,20 +245,20 @@
     "                        \n",
     "                        if lab_result:\n",
     "                            current_strength = lab_result\n",
-    "                            training_data.append(f\"{TrainingDat} resulted in a performance of {current_strength}\")\n",
+    "                            training_data.append(f\"{TrainingDat} resulted in a shear modulus of {current_strength}\")\n",
     "                            tested_formulations.append(f\"{TrainingDat}\")\n",
     "                            \n",
     "                            \n",
     "                            valid_solution = True\n",
     "                            \n",
-    "                            print('The suggested combination achieved a performance of ', current_strength)\n",
+    "                            print('The suggested combination achieved a shear modulus of ', current_strength)\n",
     "                        else:\n",
     "                            print(f\"Iteration {iterations}: No matching lab result found for suggestion {suggested_solution}\")\n",
     "                    else:\n",
     "                        print(f\"Iteration {iterations}: Assistant's response did not contain a valid solution. Trying again.\")\n",
     "\n",
     "                    if not valid_solution:\n",
-    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: A: {360, 370, 380, 390,400, 410, 420, 430, 440, 450}, B: {0.45, 0.5, 0.55, 0.6}, C: {0.7/0.3, 0.6/0.4, 0.5/0.5}, D: {0, 1}. It is extremly important that you stick to these values and reply in the following format: 'The formulation is A = {your estimate}, B = {your estimate}, C = {your estimate}, D = {your estimate}'\"\n",
+    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: M atom: {Sc, Ti, V, Cr, Zr, Nb, Mo, Hf, Ta, W} //A atom: {Al, Si, P, S, Ga, Ge, As, Cd, In, Sn, Tl, Pb} //X atom: {C, N}. It is extremly important that you stick to these values and reply in the following format: The combination is M = {your estimate}, A = {your estimate}, X = {your estimate}\"\n",
     "                else:\n",
     "                    print(f\"Iteration {iterations}: Response not from 'assistant'. Trying again.\")\n",
     "\n",
@@ -283,13 +283,13 @@
     "            writer = csv.writer(file)\n",
     "\n",
     "            # write the headers\n",
-    "            writer.writerow([\"Formulation\", \"Compressive Strength\"])\n",
+    "            writer.writerow([\"Combination\", \"Shear Modulus\"])\n",
     "\n",
     "            # iterate over the training data\n",
     "            for data in training_data:\n",
     "                try:\n",
     "                    # parse the data to extract formulation and compressive strength\n",
-    "                    formulation, strength_str = data.split(\" resulted in a performance of \")\n",
+    "                    formulation, strength_str = data.split(\" resulted in a shear modulus of \")\n",
     "                    strength = float(strength_str.split(\" \")[0])  # convert string to float\n",
     "                    writer.writerow([formulation, strength])\n",
     "                except ValueError as e:\n",
