--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -30,7 +30,7 @@
     "    enable_TVDL_strategy = 2\n",
     "def check_strength(training_data, desired_strength):\n",
     "    # Check if any strength in the selected data is >= desired_strength\n",
-    "    return any(s['strength'] >= desired_strength for s in training_data)\n",
+    "    return any(s[\"Shear Modulus\"] >= desired_strength for s in training_data)\n",
     "\n",
     "def select_and_format_data(data, desired_strength):\n",
     "    while True:\n",
@@ -42,26 +42,26 @@
     "        tested_formulations = []\n",
     "        for _, row in selected_data.iterrows():\n",
     "            # Ensure these column names match your DataFrame exactly\n",
-    "            powder = row[\"Powderkg\"]\n",
-    "            wc = row[\"WC\"]\n",
-    "            materials = row[\"Materials\"]\n",
+    "            M_atom = row[\"M-site element\"]\n",
+    "            A_atom = row[\"A-site element\"]\n",
+    "            X_atom = row[\"X-site element\"]\n",
     "            # Extract Fly Ash/GGBFS ratio and curing method from materials as done previously\n",
-    "            fa_ggbfs = materials.split(\",\")[0].split(\"-\")[1]\n",
-    "            curing_method = materials.split(\",\")[-1].strip()\n",
-    "            curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\").replace(\" (Rao et al.)\", \"\")\n",
-    "            if curing_method == 'Ambient curing':\n",
-    "                curing_method = 0\n",
-    "            elif curing_method == 'Heat curing':\n",
-    "                curing_method = 1\n",
-    "            else:\n",
-    "                print('Unknown curing method error in select_and_format_data')\n",
-    "            strength = row[\"fc_28dGroundTruth\"]\n",
+    "            #fa_ggbfs = materials.split(\",\")[0].split(\"-\")[1]\n",
+    "            #curing_method = materials.split(\",\")[-1].strip()\n",
+    "            #curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\").replace(\" (Rao et al.)\", \"\")\n",
+    "            #if curing_method == 'Ambient curing':\n",
+    "                #curing_method = 0\n",
+    "            #elif curing_method == 'Heat curing':\n",
+    "                #curing_method = 1\n",
+    "            #else:\n",
+    "                #print('Unknown curing method error in select_and_format_data')\n",
+    "            strength = row[\"G (Shear modulus)\"]\n",
     "            \n",
     "            # Certainly needs to be a change here (me)\n",
     "\n",
-    "            training_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method} resulted in a performance of {strength}\"\n",
-    "            training_data_formatted.append({'formatted_str': training_str, 'strength': strength})\n",
-    "            tested_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method}\"\n",
+    "            training_str = f\"M = {M_atom}, A = {A_atom}, X = {X_atom} resulted in a shear modulus of {strength} MPa\"\n",
+    "            training_data_formatted.append({'formatted_str': training_str, 'Shear Modulus': strength})\n",
+    "            tested_str = f\"M = {M_atom}, A = {A_atom}, X = {X_atom}\"\n",
     "            tested_formulations.append(tested_str) \n",
     "\n",
     "        # Check if any selected data point's strength >= desired_strength\n",
@@ -72,15 +72,15 @@
     "def find_matching_result(df, suggestion):\n",
     "    if suggestion:\n",
     "        # Create the suggestion string in the same format as the formulation strings\n",
-    "        suggestion_str = f'The combination is A = {suggestion[\"A\"]}, B = {suggestion[\"B\"]}, C = {suggestion[\"C\"]}, D = {suggestion[\"D\"]}'\n",
-    "        TrainingDat = f'A = {suggestion[\"A\"]}, B = {suggestion[\"B\"]}, C = {suggestion[\"C\"]}, D = {suggestion[\"D\"]}'\n",
+    "        suggestion_str = f'The combination is M = {suggestion[\"M\"]}, A = {suggestion[\"A\"]}, X = {suggestion[\"X\"]}'\n",
+    "        TrainingDat = f'M = {suggestion[\"M\"]}, A = {suggestion[\"A\"]}, X = {suggestion[\"X\"]}'\n",
     "        \n",
     "        # Look for a match in the DataFrame\n",
-    "        match = df[df[\"Formulation\"].str.lower() == suggestion_str.lower()]\n",
+    "        match = df[df[\"Combination\"].str.lower() == suggestion_str.lower()]\n",
     "        \n",
     "        # If a match was found, return the lab result and TrainingDat\n",
     "        if not match.empty:\n",
-    "            return match.iloc[0][\"Strength\"], TrainingDat\n",
+    "            return match.iloc[0][\"Shear Modulus\"], TrainingDat\n",
     "        \n",
     "        # If no match was found, print the suggestion string for debugging\n",
     "        else:\n",
@@ -101,10 +101,9 @@
     "    def normalize_key(key):\n",
     "        # Normalize common variations to a standard form\n",
     "        key_map = {\n",
-    "            'powderkg': 'powderkg',\n",
-    "            'wc': 'wc',\n",
-    "            'materials': 'materials',\n",
-    "            'curing': 'curing'\n",
+    "            'M-site element': 'M',\n",
+    "            'A-site element': 'A',\n",
+    "            'X-site element': 'X',\n",
     "        }\n",
     "        for known_key, normalized_key in key_map.items():\n",
     "            if known_key in key.lower().replace(\" \", \"\"):\n",
@@ -122,7 +121,7 @@
     "            #return solution\n",
     "    #except json.JSONDecodeError:\n",
     "        # If JSON parsing fails, proceed with regex parsing for the plain text format\n",
-    "    keys = ['A', 'B', 'C', 'D']  # Updated to include 'curing'\n",
+    "    keys = ['M', 'A', 'X']  # Updated to include 'curing'\n",
     "    for key in keys:\n",
     "        #if key != 'D':  # For 'curing', we might need a different approach\n",
     "            match = re.search(fr\"{key} = (.*?)(,|$)\", response, re.IGNORECASE)\n",
@@ -151,13 +150,13 @@
     "    \"\"\"\n",
     "    Given a lab result, format a response message to the model.\n",
     "    \"\"\"\n",
-    "    return f\"We've achieved a performance of {lab_result['fc_28d_Lab_validation']}. Let's try to do better!\"\n",
+    "    return f\"We've achieved a performance of {lab_result['G (Shear modulus)']}. Let's try to do better!\"\n",
     "\n",
     "\n",
     "df = pd.read_csv('Data/alloys.csv')\n",
     "\n",
     "# Initialize empty DataFrame\n",
-    "formulation_df = pd.DataFrame(columns=[\"Formulation\", \"Strength\"])\n",
+    "formulation_df = pd.DataFrame(columns=[\"Combination\", \"Shear Modulus\"])\n",
     "\n",
     "# Loop through each row in the original data\n",
     "for idx, row in df.iterrows():\n",
@@ -171,10 +170,10 @@
     "    strength = row[\"G (Shear modulus)\"]\n",
     "    \n",
     "    # Create formulation string in the same format as the model's output\n",
-    "    formulation = f'The formulation is M = {M}, A = {A}, X = {X}'\n",
+    "    formulation = f'The combination is M = {M}, A = {A}, X = {X}'\n",
     "    \n",
     "    # Append the formulation and its respective strength to the new DataFrame\n",
-    "    new_row = pd.DataFrame({\"Formulation\": [formulation], \"Strength\": [strength]})\n",
+    "    new_row = pd.DataFrame({\"Combination\": [formulation], \"Shear Modulus\": [strength]})\n",
     "    formulation_df = pd.concat([formulation_df, new_row], ignore_index=True)\n",
     "\n",
     "def handle_openai_error(exception):\n",
@@ -259,19 +258,19 @@
     "budget = num_development.value\n",
     "NrOfExper = num_experiments.value\n",
     "\n",
-    "desired_strength = formulation_df[\"Strength\"].quantile(targ_quant.value/100)\n",
+    "desired_strength = formulation_df[\"Shear Modulus\"].quantile(targ_quant.value/100)\n",
     "\n",
-    "num_entries_above_desired = (formulation_df[\"Strength\"] >= desired_strength).sum()\n",
+    "num_entries_above_desired = (formulation_df[\"Shear Modulus\"] >= desired_strength).sum()\n",
     "\n",
     "# Print the result\n",
     "\n",
-    "print('SUMMARY\\n' +'The design target is to achieve a performance of ',desired_strength, 'within ',num_development.value,' development cycles.\\n' +\n",
+    "print('SUMMARY\\n' +'The design target is to achieve a shear modulus of ',desired_strength, 'MPa within ',num_development.value,' development cycles.\\n' +\n",
     "      'The Experiment is repeated ',num_experiments.value,' times using the ',model_dropdown.value, ' model and the prompt strategy: ',prompt_dropdown.value,'.')\n",
     "print(\"There are \", num_entries_above_desired,' combinations above or equal to desired_strength.')\n",
     "\n",
     "\n",
     "def extract_formulations_from_training_data(training_data):\n",
-    "    pattern = re.compile(r'A\\s*=\\s*(\\d+),\\s*B\\s*=\\s*(\\d+\\.\\d+),\\s*C\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*D\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
+    "    pattern = re.compile(r'M\\s*=\\s*(\\w+),\\s*A\\s*=\\s*(\\w+),\\s*X\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
     "    training_formulations = [match.group(0) for data in training_data for match in [pattern.search(data)] if match]\n",
     "    return training_formulations"
    ]
