adjusted plotting and baselines

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "16d64e23",
    "metadata": {
     "scrolled": true
@@ -50,7 +50,7 @@
     "import re\n",
     "\n",
     "def extract_info(filename):\n",
-    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext|ZeroContext)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
+    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext|ZeroContext|TernaryAlloy)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
     "    match = re.match(pattern, filename)\n",
     "    if match:\n",
     "        # Return a tuple as explicitly stated\n",
@@ -79,7 +79,7 @@
     "\n",
     "def load_data(filename, budget):\n",
     "    df = pd.read_csv(filename)\n",
-    "    strength = df['Compressive Strength'].values\n",
+    "    strength = df['Shear Modulus'].values\n",
     "\n",
     "    if len(strength) < budget:\n",
     "        last_value = strength[-1] if len(strength) > 0 else 0\n",
@@ -88,7 +88,7 @@
     "\n",
     "def load_data_baseline(filename, budget):\n",
     "    df = pd.read_csv(filename)\n",
-    "    strength = df['fc_28dGroundTruth'].values\n",
+    "    strength = df['G (Shear modulus)'].values\n",
     "    if len(strength) > 4:  # if more than initial samples, drop them\n",
     "        strength = strength[4:]  # drop first 4 samples\n",
     "    if len(strength) < budget:\n",
@@ -311,11 +311,11 @@
     "\n",
     "            # Add labels, title, and legend for each subplot\n",
     "            axs[row, col].set_xlabel('Development Cycle')\n",
-    "            axs[row, 0].set_ylabel('Performance')\n",
+    "            axs[row, 0].set_ylabel('Shear Modulus [MPa]')\n",
     "\n",
     "            # Set title based on the length of config\n",
     "            if len(config) == 5:  # For chat models with full configuration\n",
-    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Design Context'} \"\n",
+    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Ternary Alloy' if {config[1]} == {'TernaryAlloy'} else 'Design Context'} \"\n",
     "                \n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
@@ -341,7 +341,7 @@
     "            fig.delaxes(axs.flat[idx])  # Remove the extra subplot\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
-    "            ax.set_ylim([30, 66])\n",
+    "            ax.set_ylim([0, 150])\n",
     "\n",
     "        plt.tight_layout()\n",
     "        plt.show()\n",
@@ -429,10 +429,10 @@
     "\n",
     "            # Add labels, title, and legend for each subplot\n",
     "            axs[row, col].set_xlabel('Development Cycle')\n",
-    "            axs[row, 0].set_ylabel('Performance')\n",
+    "            axs[row, 0].set_ylabel('Shear Modulus [MPa]')\n",
     "            # Set title based on the length of config\n",
     "            if len(config) == 5:  # For chat models with full configuration\n",
-    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Design Context'} \"\n",
+    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Ternary Alloy' if {config[1]} == {'TernaryAlloy'} else 'Design Context'} \"\n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
     "                \n",
@@ -456,10 +456,10 @@
     "            fig.delaxes(axs.flat[idx])  # Remove the extra subplot\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
-    "            ax.set_ylim([30, 66])\n",
+    "            ax.set_ylim([0, 150])\n",
     "\n",
     "        plt.tight_layout()\n",
-    "        plt.show();\n",
+    "        plt.show()\n",
     "             \n",
     "        \n",
     "# Example usage\n",
@@ -485,7 +485,7 @@
     "\n",
     "    # Draw the new plot inside the Output widget\n",
     "    with plot_output:\n",
-    "        plot_results(data, budget, desired_target= 64.86370000000001)\n",
+    "        plot_results(data, budget, desired_target= 143.46)\n",
     "\n",
     "    # Release the lock\n",
     "    lock.release()\n",
@@ -503,7 +503,7 @@
     "\n",
     "    # Draw the new plot inside the Output widget\n",
     "    with plot_output:\n",
-    "        plot_mean_results(data, budget, desired_target= 64.86370000000001)\n",
+    "        plot_mean_results(data, budget, desired_target= 143.46)\n",
     "\n",
     "    # Release the lock\n",
     "    lock.release()    \n",
