--- a/utils/Run_Baselines.ipynb
+++ b/utils/Run_Baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "078febe5",
    "metadata": {},
    "outputs": [
@@ -34,12 +34,13 @@
     "    return -(prediction + epsilon * std_dev)\n",
     "\n",
     "# load the data\n",
-    "file_path = os.path.join('Data', 'numeric_data.csv')\n",
+    "# load the data\n",
+    "file_path = os.path.join('Data', 'alloys.csv')\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Extract features and target\n",
-    "features = [\"Powderkg\", \"Liquidkg\", \"WC\", \"Fly_Ash_ratio\", \"GGBFS_ratio\", \"temperature\"]\n",
-    "target = \"fc_28dGroundTruth\"\n",
+    "features = [\"M-atom d-orbital radii\", \"A-atom p-orbital radii\", \"X-atom p-orbital radii\"]\n",
+    "target = \"G (Shear modulus)\"\n",
     "\n",
     "# Initialize kernel and GP model\n",
     "#kernel = ConstantKernel(1.0, (1e-3, 1e3)) * Matern(length_scale=10, nu=1.5)\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "841846c4",
    "metadata": {},
    "outputs": [
@@ -192,12 +193,12 @@
     "        \n",
     "        \n",
     "# load the data\n",
-    "file_path = os.path.join('Data', 'numeric_data.csv')\n",
+    "file_path = os.path.join('Data', 'alloys.csv')\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Extract features and target\n",
-    "features = [\"Powderkg\", \"Liquidkg\", \"WC\", \"Fly_Ash_ratio\", \"GGBFS_ratio\", \"temperature\"]\n",
-    "target = \"fc_28dGroundTruth\"\n",
+    "features = [\"M-atom d-orbital radii\", \"A-atom p-orbital radii\", \"X-atom p-orbital radii\"]\n",
+    "target = \"G (Shear modulus)\"\n",
     "\n",
     "timestamp = str(int(time.time()))               \n",
     "run_experiment(data, features, target, desired_strength, experiment_num=30, initial_sample_size=4, iteration_num=10)\n",
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "db080d77",
    "metadata": {},
    "outputs": [
@@ -267,12 +268,12 @@
     "        \n",
     "        \n",
     "# load the data\n",
-    "file_path = os.path.join('Data', 'numeric_data.csv')\n",
+    "file_path = os.path.join('Data', 'alloys.csv')\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Extract features and target\n",
-    "features = [\"Powderkg\", \"Liquidkg\", \"WC\", \"Fly_Ash_ratio\", \"GGBFS_ratio\", \"temperature\"]\n",
-    "target = \"fc_28dGroundTruth\"\n",
+    "features = [\"M-atom d-orbital radii\", \"A-atom p-orbital radii\", \"X-atom p-orbital radii\"]\n",
+    "target = \"G (Shear modulus)\"\n",
     "timestamp = str(int(time.time()))               \n",
     "run_experiment(data, features, target, desired_strength, experiment_num=30, initial_sample_size=0, iteration_num=10)\n",
     "                "
