--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -94,6 +94,11 @@
     "            messages.append({\"role\": \"user\", \"content\": \"Try harder! Pay close attention to the exact format and order of ther parameters, for instance Si and not silicon\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
     "                print(\"Try harder! Pay close attention to the exact format and order of ther parameters, for instance Si and not silicon\")\n",
+    "        #Added an out for possible infinite loops (still does not work consistently enough) (e.g. combination of Mo, Ge, N, which is not in the dataset)\n",
+    "        if retry_count > 6:\n",
+    "            messages.append({\"It seems like there is something wrong with your suggestion. Try a completely different one!\"})\n",
+    "            if conversation_dropdown.value == 'Complete':\n",
+    "                print(\"It seems like there is something wrong with your suggestion. Try a completely different one!\")\n",
     "        \n",
     "                    \n",
     "        \n",
@@ -251,7 +256,7 @@
     "                            \n",
     "                            valid_solution = True\n",
     "                            \n",
-    "                            print('The suggested combination achieved a shear modulus of ', current_strength)\n",
+    "                            print('The suggested combination achieved a shear modulus of', current_strength, 'MPa')\n",
     "                        else:\n",
     "                            print(f\"Iteration {iterations}: No matching lab result found for suggestion {suggested_solution}\")\n",
     "                    else:\n",
@@ -273,6 +278,8 @@
     "            prompt_value = 'NoContext'\n",
     "        elif 'zero' in prompt_dropdown.value:\n",
     "            prompt_value = 'ZeroContext'\n",
+    "        elif 'ternary' in prompt_dropdown.value:\n",
+    "            prompt_value = 'TernaryAlloy'\n",
     "        else:\n",
     "            prompt_value = 'Context'\n",
     "\n",
