Added context prompt

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -50,7 +50,7 @@
     "import re\n",
     "\n",
     "def extract_info(filename):\n",
-    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext|ZeroContext|TernaryAlloy)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
+    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext|ZeroContext|TernaryAlloy|TernaryAlloycontext)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
     "    match = re.match(pattern, filename)\n",
     "    if match:\n",
     "        # Return a tuple as explicitly stated\n",
