--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -280,6 +280,9 @@
     "            prompt_value = 'ZeroContext'\n",
     "        elif 'ternary' in prompt_dropdown.value:\n",
     "            prompt_value = 'TernaryAlloy'\n",
+    "        \n",
+    "        elif 'terncontext' in prompt_dropdown.value:\n",
+    "            prompt_value = 'TernaryAlloycontext'\n",
     "        else:\n",
     "            prompt_value = 'Context'\n",
     "\n",
