--- a/utils/Settings.ipynb
+++ b/utils/Settings.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Create the 'prompt' dropdown menu with options\n",
     "prompt_dropdown = widgets.Dropdown(\n",
-    "    options=['ternary'],\n",
+    "    options=['ternary', 'terncontext'],\n",
     "    value='ternary',\n",
     "    description='Prompt:'\n",
     ")\n",
