--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -222,6 +222,10 @@
     "if  prompt_dropdown.value == 'ternary':\n",
     "    with open('Prompts/prompts_ID_ternary.txt', 'r') as f:\n",
     "        lines = f.read().splitlines()\n",
+    "\n",
+    "if  prompt_dropdown.value == 'terncontext':\n",
+    "    with open('Prompts/prompts_ID_ternarycontext.txt', 'r') as f:\n",
+    "        lines = f.read().splitlines()\n",
     "# Store the contents in separate variables\n",
     "#instructions_text = lines[0]\n",
     "DA_role_text = lines[0]\n",
