Added number of exp. in plot title

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -299,7 +299,7 @@
     "                upper_bound = np.percentile(cumulative_strengths, 90, axis=0)\n",
     "\n",
     "                iterations = list(range(1, len(mean_strengths) + 1))\n",
-    "\n",
+    "                length = len(all_strengths)\n",
     "                # Plotting\n",
     "                label = 'TT=5' if tt == 2 else'TT=3' if tt == 1 else \"No Feedback\" if tt == 3 else 'Zero-Shot'  \n",
     "                axs[row, col].plot(iterations, mean_strengths, color=tt_colors[tt], label=label, linewidth=2)\n",
@@ -315,7 +315,7 @@
     "\n",
     "            # Set title based on the length of config\n",
     "            if len(config) == 5:  # For chat models with full configuration\n",
-    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Ternary Alloy' if {config[1]} == {'TernaryAlloy'} else 'Design Context'} \"\n",
+    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Ternary Alloy' if {config[1]} == {'TernaryAlloy'} else 'Ternary Alloy Context' if {config[1]} == {'TernaryAlloycontext'} else 'Design Context'} ({length} Exp.)\"\n",
     "                \n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
@@ -415,9 +415,9 @@
     "                mean_strengths = np.mean(all_strengths, axis=0)\n",
     "                lower_bound = np.percentile(all_strengths,10, axis=0)\n",
     "                upper_bound = np.percentile(all_strengths, 90, axis=0)\n",
-    "\n",
+    "                \n",
     "                iterations = list(range(1, len(mean_strengths) + 1))\n",
-    "\n",
+    "                length = len(all_strengths)\n",
     "                # Plotting\n",
     "                label = 'TT=5' if tt == 2 else'TT=3' if tt == 1 else \"No Feedback\" if tt == 3 else 'Zero-Shot'  \n",
     "                axs[row, col].plot(iterations, mean_strengths, color=tt_colors[tt], label=label, linewidth=2)\n",
@@ -432,7 +432,8 @@
     "            axs[row, 0].set_ylabel('Shear Modulus [MPa]')\n",
     "            # Set title based on the length of config\n",
     "            if len(config) == 5:  # For chat models with full configuration\n",
-    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Ternary Alloy' if {config[1]} == {'TernaryAlloy'} else 'Design Context'} \"\n",
+    "                title = f\"{'Zero Context' if config[1] == 'ZeroContext' else 'Ternary Alloy' if config[1] == 'TernaryAlloy' else 'Ternary Alloy Context' if config[1] == 'TernaryAlloycontext' else 'Design Context'} ({length} Exp.)\"\n",
+    "                \n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
     "                \n",
