created heatmap file

--- a/PlotResults.ipynb
+++ b/PlotResults.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "217fc87f",
    "metadata": {
     "scrolled": false
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eeb42ab05e944366946d975fcf3d15ec",
+       "model_id": "c76be99336214624a28bde78f9fd8769",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44ee7c15fab3496c99098b9fcabf784e",
+       "model_id": "c1640b0d9a934b2e8bec7cbc877b8d33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05595be5061440b492037aa4416939b0",
+       "model_id": "2f357ec64dab43f5a4edf0556b3903dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08f9bdd7d2084f658b5ad452eaaa8b0d",
+       "model_id": "c883e61b40a14234a5c0d5039a37d426",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82507794f7194a199e5cb4d7dcf554d6",
+       "model_id": "a0bb3ec96ea840d2ad05b4c905f95144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2865630fc66e47be986ad4aacc95811c",
+       "model_id": "3df2e35514b94aae970da865d4ab163e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,11 +99,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3b3c0aa0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c3c7d54ace9479ea7a67b021fbba4f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SelectMultiple(description='Combinations:', layout=Layout(height='350px', width='90%'), options=('Model: gpt-3…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58a75558121d488e88190ea4eef7f261",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Plot Cumulative Performance', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Another session is running, please wait...\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run utils/heatmap.ipynb"
+   ]
   },
   {
    "cell_type": "code",
